<resources>
    <string name="app_name">KoKomputer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_cart">Your Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="title_tab_home">For You</string>
    <string name="text_banner">Toko Komputer Serba ada</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delivered_to">Delivered to</string>
    <string name="jalan_depok_timur">Jalan Depok Timur</string>
    <string name="you_might_looking_for">You might looking for</string>
    <string name="text_btn_add_to_cart">Add to cart</string>
    <string name="hint_name">Name</string>
    <string name="text_name">Hermas</string>
    <string name="text_hint_username">Username</string>
    <string name="text_username">hermas.yuda</string>
    <string name="text_hint_email">Email</string>
    <string name="text_email">hermas.yuda@gmail.com</string>
    <string name="text_edit">Edit</string>
    <string name="text_save">Save</string>
    <string name="text_hint_notes">Notes</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_title_your_cart">Your Cart</string>
    <string name="text_add_to_cart_success">Add to cart Success</string>
    <string name="add_to_cart_failed">Add to cart failed</string>
    <string name="loading">Loading</string>
    <string name="text_title_order_confirmation">Order Confirmation</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="shopping_summary">Shopping summary</string>
    <string name="total_quantity">x%s</string>
    <string name="error_checkout">Error Checkout</string>
    <string name="create_order_success">Create order Success</string>
    <string name="close">Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_when_getting_the_data_please_try_again_later">Error when getting the data, Please try again later !</string>
    <string name="text_empty_data">Empty Result</string>


</resources>